<resources>
    <string name="app_name">Team3 ToDo</string>
    <string name="shortcut_short_label1">New ToDo</string>
    <string name="shortcut_long_label1">Create new ToDo</string>
    <string name="mainTitle">My ToDos</string>
    <string name="plus">+</string>
    <string name="copyright">Java Bootcamp\nAll rights reserved</string>
    <string name="createTodo">Create New ToDo</string>
    <string name="editTodo">Edit ToDo</string>
    <string name="todoTitle">Title</string>
    <string name="hintTitle">e.g. Cat</string>
    <string name="todoDescription">Description</string>
    <string name="hintDescription">e.g. Buy milk</string>
    <string name="todoDue">Due to</string>
    <string name="todoDate">Tomorrow</string>
    <string name="buttonCreate">Create</string>
    <string name="buttonCancel">Cancel</string>
    <string name="buttonBack">Back</string>
    <string name="buttonSave">Save</string>
    <string name="buttonDelete">Delete</string>
    <string name="title_activity_settings">Settings</string>
    <string name="enableDarkMode">Enable Dark theme</string>
    <string name="nightMode">Dark theme</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
