<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".MainActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimaryDark"
        android:layout_height="198dp">

        <TextView
            android:id="@+id/titlepage"
            android:layout_marginTop="20dp"
            android:textSize="26sp"
            android:textColor="#FFF"
            android:text="@string/createTodo"
            android:textAlignment="center"
            android:layout_marginBottom="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="-90dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bgtodo"
        android:orientation="vertical"
        android:paddingTop="22dp">

        <LinearLayout
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/addtitle"
                android:textSize="18sp"
                android:textColor="?attr/colorAccent"
                android:text="@string/todoTitle"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/title"
                android:inputType="text"
                android:background="@drawable/bginputtask"
                android:paddingStart="12dp"
                android:textColorHint="#B5B5B5"
                android:textColor="?attr/black"
                android:hint="@string/hintTitle"
                android:maxLength="16"
                android:layout_width="match_parent"
                android:layout_height="55dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/adddescription"
                android:textSize="18sp"
                android:textColor="?attr/colorAccent"
                android:text="@string/todoDescription"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/description"
                android:inputType="text"
                android:background="@drawable/bginputtask"
                android:paddingStart="12dp"
                android:textColorHint="#B5B5B5"
                android:maxLength="38"
                android:textColor="?attr/black"
                android:hint="@string/hintDescription"
                android:layout_width="match_parent"
                android:layout_height="55dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/adddate"
                android:textSize="18sp"
                android:textColor="?attr/colorAccent"
                android:text="@string/todoDue"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_marginTop="-30dp"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"/>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnSaveTask"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/buttonCreate"
        android:textColor="#FFF"
        android:textAllCaps="false"
        android:background="@drawable/bgbtncreate"
        android:textSize="22sp"
        android:layout_width="match_parent"
        android:layout_height="55dp" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="14dp"
        android:text="@string/buttonCancel"
        android:textColor="?attr/deleteTextColor"
        android:textAllCaps="false"
        android:background="@drawable/bgbtncancel"
        android:textSize="22sp"
        android:layout_width="match_parent"
        android:layout_height="55dp" />


</LinearLayout>